--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!DOCTYPE html> 
+<html> 
+<Head>
+<title> 7 Wonders Of The Ancient World</title>
+</Head>
+  <Body>
+    <h1> 7 Wonders Of The Ancient World</h1>
+    <form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit">
+</form>
+  </Body>
+</html>
