--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 </Head>
   <Body>
     <h1> 7 Wonders Of The Ancient World</h1>
-    <form action="/action_page.php">
+<form>
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
+  <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <input type="submit" value="Submit">
+  <input type="text" id="lname" name="lname">
+  <label for="lname">E-Mail Address:</label><br>
+  <input type="Email" id="lname" name="lname">
+   <input type="submit" value="Submit"> 
 </form>
+    
   </Body>
 </html>
