--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <input type="Email" id="lname" name="lname">
    <input type="submit" value="Submit"> 
 </form>
+    <h2> Discover and Learn more about the 7 Wonders Of The Ancient World </h2>
     
   </Body>
 </html>
