--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
 </Head>
   <Body>
     <h1> 7 Wonders Of The Ancient World</h1>
+    <p> 
+    </p>
+    <h2> Discover and Learn more about the 7 Wonders Of The Ancient World </h2>
 <form>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
+    <p> 
+    </p>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
+    <p> 
+    </p>
   <label for="lname">E-Mail Address:</label><br>
-  <input type="Email" id="lname" name="lname">
+  <input type="Email" id="lname" name="lname">  <p> 
+    </p>
    <input type="submit" value="Submit"> 
-</form>
-    <h2> Discover and Learn more about the 7 Wonders Of The Ancient World </h2>
-    
+</form>  
   </Body>
 </html>
