--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> 7 Wonders Of The Ancient World</title>
 </Head>
   <Body>
-    <h1> 7 Wonders Of The Ancient World</h1>
+    <h1 style="color:Tomato;">7 Wonders Of The Ancient World</h1>
     <p> 
       
     </p>
