--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title> 7 Wonders Of The Ancient World</title>
 </Head>
   <Body>
+    <h1 style="color:blue;">7 Wonders Of The Ancient World</h1>
     <h1 style="color:Tomato;">7 Wonders Of The Ancient World</h1>
     <p> 
       
