--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
     </p>
    <input type="submit" value="Submit"> 
 </form>  
+    <h3> Breif Introduction to the 7 Wonders:</h3>
+    <P> The Seven Wonders of the Ancient World show how powerful human skill and ideas can be. These wonders were built thousands of years ago, yet people still talk about them today. They were not made with modern machines or technology. They were made with hard work, strong belief, and a deep desire to leave something meaningful behind. Because of this, the Seven Wonders are not just old buildings. They are proof that ancient people were intelligent, creative, and determined.
+
+Each wonder had a special purpose and message. The Great Pyramid of Giza showed the power and belief of the Egyptians and their view of the afterlife. The Hanging Gardens of Babylon represented beauty and care in the middle of a dry land. The Statue of Zeus at Olympia honored religion and respect for the gods. The Temple of Artemis showed wealth and artistic skill. The Mausoleum at Halicarnassus proved love and remembrance. The Colossus of Rhodes stood for strength and victory. The Lighthouse of Alexandria guided ships and showed the importance of knowledge and trade. Together, these wonders show that ancient civilizations valued faith, beauty, strength, and learning.
+
+The Seven Wonders of the Ancient World matter because they remind us what humans can achieve when they work toward a goal. Even though only one still stands today, their impact has not disappeared. They inspire modern builders, artists, and thinkers to aim higher and think bigger. Learning about these wonders helps us respect history and understand that greatness is not new. It has always been part of humanity.
+</P>
   </Body>
 </html>
