--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title> 7 Wonders Of The Ancient World</title>
 </Head>
   <Body>
-    <h1 style="color:blue;">7 Wonders Of The Ancient World</h1>
     <h1 style="color:Tomato;">7 Wonders Of The Ancient World</h1>
+    <p> By: Anas Arafa
     <p> 
       
     </p>
-    <h2> Discover and Learn more about the 7 Wonders Of The Ancient World </h2>
+    <h3> Discover and Learn more about the 7 Wonders Of The Ancient World </h3>
 <form>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
