--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </Head>
   <Body>
     <h1 style="color:Tomato;">7 Wonders Of The Ancient World</h1>
-    <p> By: Anas Arafa
     <p> 
       
     </p>
@@ -28,11 +27,32 @@
    <input type="submit" value="Submit"> 
 </form>  
     <h3> Breif Introduction to the 7 Wonders:</h3>
-    <P> The Seven Wonders of the Ancient World show how powerful human skill and ideas can be. These wonders were built thousands of years ago, yet people still talk about them today. They were not made with modern machines or technology. They were made with hard work, strong belief, and a deep desire to leave something meaningful behind. Because of this, the Seven Wonders are not just old buildings. They are proof that ancient people were intelligent, creative, and determined.
+<p> The Seven Wonders of the Ancient World show how powerful human skill and ideas can be. These wonders were built thousands of years ago, yet people still talk about them today. They were not made with modern machines or technology. They were made with hard work, strong belief, and a deep desire to leave something meaningful behind. Because of this, the Seven Wonders are not just old buildings. They are proof that ancient people were intelligent, creative, and determined.</p>
+ <p> Each wonder had a special purpose and message. The Great Pyramid of Giza showed the power and belief of the Egyptians and their view of the afterlife. The Hanging Gardens of Babylon represented beauty and care in the middle of a dry land. The Statue of Zeus at Olympia honored religion and respect for the gods. The Temple of Artemis showed wealth and artistic skill. The Mausoleum at Halicarnassus proved love and remembrance. The Colossus of Rhodes stood for strength and victory. The Lighthouse of Alexandria guided ships and showed the importance of knowledge and trade. Together, these wonders show that ancient civilizations valued faith, beauty, strength, and learning.</p>
+ <p>The Seven Wonders of the Ancient World matter because they remind us what humans can achieve when they work toward a goal. Even though only one still stands today, their impact has not disappeared. They inspire modern builders, artists, and thinkers to aim higher and think bigger. Learning about these wonders helps us respect history and understand that greatness is not new. It has always been part of humanity.</p>
+    <h3> Lets Begin With Egypt! : </h3>
+    <p> Lets Begin With Egypt </p>
+    <p> Egypt Used to have 2 Wonders Of The Ancient World</p>
+    <h3> 1) Great Pyramid Of Egypt </h3>
+    <P>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu. It stands near the Nile River and towers over the land. The pyramid was meant to prepare the pharaoh for the afterlife. This shows how strong Egyptian religious beliefs were. </P>
+ <P>Millions of stone blocks were used to build the pyramid. Workers moved these stones without modern machines. Their planning and math skills were very advanced. This proves the intelligence of ancient Egyptians. </P>
+  <p>The pyramid was once covered in smooth white limestone. It reflected sunlight and shined brightly. People could see it from far away. It symbolized power and greatness.</p>
+  <p>Inside the pyramid are narrow halls and chambers. These spaces protected the pharaoh’s body and treasures. Every part was carefully planned. Nothing was built by accident.</p>
+  <p>The Great Pyramid is the only wonder still standing today. It has survived time and weather. This shows the strength of its design. No other ancient structure compares to it.
 
-Each wonder had a special purpose and message. The Great Pyramid of Giza showed the power and belief of the Egyptians and their view of the afterlife. The Hanging Gardens of Babylon represented beauty and care in the middle of a dry land. The Statue of Zeus at Olympia honored religion and respect for the gods. The Temple of Artemis showed wealth and artistic skill. The Mausoleum at Halicarnassus proved love and remembrance. The Colossus of Rhodes stood for strength and victory. The Lighthouse of Alexandria guided ships and showed the importance of knowledge and trade. Together, these wonders show that ancient civilizations valued faith, beauty, strength, and learning.
-
-The Seven Wonders of the Ancient World matter because they remind us what humans can achieve when they work toward a goal. Even though only one still stands today, their impact has not disappeared. They inspire modern builders, artists, and thinkers to aim higher and think bigger. Learning about these wonders helps us respect history and understand that greatness is not new. It has always been part of humanity.
-</P>
+The Great Pyramid matters because it shows human determination. It proves great things can be built with effort. People still study it today. It continues to inspire the world.</p>
+<p>
+  
+</p>
+    <h4> Fun Facts: </h4>
+    <P> • The Great Pyramid was the tallest man-made structure in the world for over 3,800 years. </P>
+    <p> • Each stone block can weigh as much as a car or more. </p>
+    <p> • It was built so accurately that its sides almost perfectly face north, south, east, and west. </p>
+    <img src="https://images.immediate.co.uk/production/volatile/sites/7/2019/07/33-GettyImages-154260931-216706f.jpg?quality=90&resize=980,654" alt="Great Pyramid Of Giza" width="104" height="142">
+ <p>Great Pyramid Of Giza</p>
+    <footer> 
+   <p> Author: Anas Arafa</p>
+   <p> Email: anasarafa35@gmail.com</p>
+ </footer>
   </Body>
 </html>
