--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@ The Great Pyramid matters because it shows human determination. It proves great 
  <p>Great Pyramid Of Giza</p>
 
     <h3> 2) Lighthouse Of Alexsandria </h3>
+    <p> The Lighthouse of Alexandria was built to guide ships. It stood on an island near the city. Sailors depended on it. It kept trade safe. </p>
+    <p>The lighthouse used fire and mirrors. Light shined across the sea. This was advanced technology. It saved many lives. </p>
+  <p>The lighthouse used fire and mirrors. Light shined across the sea. This was advanced technology. It saved many lives. </p>
+    <p> The structure was tall and strong. It survived storms and waves. Engineers planned it well. Its design was impressive.  </p>
+    <p> Alexandria was a center of learning. The lighthouse reflected knowledge. It helped connect the world. It was more than a tower. </p>
+    <p> Earthquakes destroyed the lighthouse. Stones fell into the sea. Nothing stands today. Time erased it.
+
+The Lighthouse matters because it symbolizes guidance. Helping others was its purpose. Knowledge led the way. Its message remains.  </p>
+   <h4> Fun Facts: </h4>
+    <p> • It helped sailors for over 1,500 years. </p>
+    <p> • Some believe it used mirrors to reflect sunlight. </p>
+    <p> • It inspired the design of later lighthouses around the world. </p>
+    <img src="https://cdn.britannica.com/07/172307-050-4D3BA855/Pharos-Alexandria.jpg" alt="Lighthouse Of Alexandria" width="400" height="400">
+ <p>Lighthouse Of Alexandria</p>
+
+    <h3> 2) Lighthouse Of Alexsandria </h3>
     
     <footer> 
    <p> Author: Anas Arafa</p>
