--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>7 Wonders of the Ancient World</title>
 </head>
-<body style="background-color: rgb(245, 225, 218);">
+<body style="background-color: lightyellow;">
   <h1 style="color:Tomato;">7 Wonders of the Ancient World</h1>
   <h3>Discover and learn more about the 7 Wonders of the Ancient World</h3>
   <nav>
