--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="#intro">Introduction</a> 
     <a href="#pyramid">Great Pyramid</a> 
     <a href="#lighthouse">Lighthouse of Alexandria</a>
+    <a href="#The Hanging Gardens Of Babylon</a>
   </nav>
   <hr>
   <form>
@@ -66,6 +67,9 @@
     <p>Lighthouse of Alexandria</p>
   </section>
   <hr>
+  <section id="The Hanging Gardens Of Babylon">
+    
+  </section>
   <footer>
     <p>Author: Anas Arafa</p>
     <p>Email: anasarafa35@gmail.com</p>
