--- a/index.html
+++ b/index.html
@@ -1,78 +1,144 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>7 Wonders of the Ancient World</title>
 </head>
+
 <body style="background-color: lightyellow;">
+
   <h1 style="color:Tomato;">7 Wonders of the Ancient World</h1>
   <h3>Discover and learn more about the 7 Wonders of the Ancient World</h3>
+
   <nav>
-    <a href="#intro">Introduction</a> 
-    <a href="#pyramid">Great Pyramid</a> 
-    <a href="#lighthouse">Lighthouse of Alexandria</a>
-    <a href="#The Hanging Gardens Of Babylon</a>
+    <a href="#intro">Introduction</a> |
+    <a href="#pyramid">Great Pyramid</a> |
+    <a href="#gardens">Hanging Gardens</a> |
+    <a href="#zeus">Statue of Zeus</a> |
+    <a href="#artemis">Temple of Artemis</a> |
+    <a href="#mausoleum">Mausoleum</a> |
+    <a href="#colossus">Colossus</a> |
+    <a href="#lighthouse">Lighthouse</a>
   </nav>
+
   <hr>
-  <form>
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname"><br><br>
-    <label for="email">E-Mail Address:</label><br>
-    <input type="email" id="email" name="email"><br><br>
-    <input type="submit" value="Submit">
-  </form>
-  <hr>
+
   <section id="intro">
     <h3>Brief Introduction to the 7 Wonders</h3>
     <p>The Seven Wonders of the Ancient World are a list of remarkable structures built by ancient civilizations. These wonders were chosen because of their size, beauty, and importance. They showed what humans could achieve without modern technology. Each wonder reflected the values of the civilization that built it.</p>
-    <p>The wonders were spread across different regions, including Egypt, Greece, and parts of the Middle East. They served different purposes such as tombs, temples, statues, and navigation aids. Some were built for religion, others for love, power, or safety. Together, they represent faith, strength, creativity, and intelligence.</p>
-    <p>Only one of the Seven Wonders still exists today, the Great Pyramid of Giza. The others were destroyed by earthquakes, fires, or time. Even though they are gone, historical records keep them alive. Studying them helps us understand ancient history.</p>
-    <p>The Seven Wonders still matter because they inspire modern builders and thinkers. They remind us that great achievements are possible with vision and effort. Ancient people aimed to leave a lasting mark on the world. Their success continues to influence us today.</p>
+    <p>The wonders were spread across different regions, including Egypt, Greece, and parts of the Middle East. They served different purposes such as tombs, temples, statues, and navigation aids. Together, they represent faith, strength, creativity, and intelligence.</p>
   </section>
+
   <hr>
+
   <section id="pyramid">
-    <h3> 1) Great Pyramid of Giza (Egypt)</h3>
-    <p>The Great Pyramid of Giza was built around 2600 BCE as a tomb for Pharaoh Khufu. It is located on the Giza Plateau near the Nile River. The pyramid was designed to help the pharaoh reach the afterlife. This shows how important religion and death rituals were to ancient Egyptians.</p>
-    <p>The pyramid was built using more than two million stone blocks. Each block was cut and placed with extreme accuracy. Workers used ramps, tools, and teamwork to move the stones. This proves the Egyptians had advanced engineering skills.</p>
-    <p>The structure was once covered in smooth white limestone that reflected sunlight. It would shine brightly during the day. This made the pyramid a powerful symbol of royal authority. It showed the strength of the pharaoh.</p>
-    <p>Inside the pyramid are narrow passageways and chambers. These areas protected the pharaoh’s body and valuables. The layout was carefully planned to prevent robbers. Every part had a purpose.</p>
-    <p>The Great Pyramid stood as the tallest structure in the world for thousands of years. It survived earthquakes, weather, and human damage. Its survival shows the strength of its design. No other ancient wonder compares to it.</p>
-    <p>The Great Pyramid matters because it represents human determination. It shows what people can accomplish through planning and belief. Historians still study how it was built. It remains one of the greatest achievements in history.</p>
+    <h3>1) Great Pyramid of Giza (Egypt)</h3>
+    <p>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu. It stands near the Nile River and was meant to prepare the pharaoh for the afterlife. This shows how strong Egyptian religious beliefs were.</p>
+    <p>Millions of stone blocks were used to build the pyramid without modern machines. The pyramid is the only wonder still standing today.</p>
+
     <h4>Fun Facts</h4>
     <ul>
       <li>The Great Pyramid was the tallest man-made structure for over 3,800 years.</li>
       <li>Each stone block can weigh as much as a car or more.</li>
       <li>Its sides almost perfectly face north, south, east, and west.</li>
     </ul>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/7/2019/07/33-GettyImages-154260931-216706f.jpg" alt="Great Pyramid of Giza" width="450" height="400">
-    <p>Great Pyramid of Giza</p>
   </section>
+
   <hr>
+
+  <section id="gardens">
+    <h3>2) Hanging Gardens of Babylon (Iraq)</h3>
+    <p>The Hanging Gardens of Babylon were said to be built in a dry land and filled with plants and trees. Water flowed through the gardens, making them very rare for the region.</p>
+    <p>Many believe the gardens were built for a queen who missed her homeland. This made the gardens a symbol of love and beauty.</p>
+
+    <h4>Fun Facts</h4>
+    <ul>
+      <li>No clear ruins of the gardens have been found.</li>
+      <li>Some historians believe they may not have existed.</li>
+      <li>Ancient writers described machines lifting water.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="zeus">
+    <h3>3) Statue of Zeus at Olympia (Greece)</h3>
+    <p>The Statue of Zeus was built inside a temple at Olympia to honor the king of the Greek gods. It was meant to inspire awe and respect.</p>
+    <p>The statue showed how important religion was in ancient Greece.</p>
+
+    <h4>Fun Facts</h4>
+    <ul>
+      <li>The statue nearly touched the temple ceiling.</li>
+      <li>It was made of gold and ivory.</li>
+      <li>People believed the roof would break if Zeus stood.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="artemis">
+    <h3>4) Temple of Artemis at Ephesus (Turkey)</h3>
+    <p>The Temple of Artemis was built to honor the goddess Artemis. It was one of the largest temples ever built.</p>
+    <p>The temple showed wealth, power, and artistic skill.</p>
+
+    <h4>Fun Facts</h4>
+    <ul>
+      <li>The temple was rebuilt three times.</li>
+      <li>One man burned it down to become famous.</li>
+      <li>It was larger than the Parthenon.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="mausoleum">
+    <h3>5) Mausoleum at Halicarnassus (Turkey)</h3>
+    <p>The Mausoleum was built as a tomb for King Mausolus. It was created to honor him after death.</p>
+    <p>The structure mixed many artistic styles and showed respect and memory.</p>
+
+    <h4>Fun Facts</h4>
+    <ul>
+      <li>The word mausoleum comes from King Mausolus.</li>
+      <li>It stood about 140 feet tall.</li>
+      <li>Artists from different regions worked on it.</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <section id="colossus">
+    <h3>6) Colossus of Rhodes (Greece)</h3>
+    <p>The Colossus of Rhodes was a giant bronze statue built after a military victory. It honored the sun god Helios.</p>
+    <p>The statue represented strength and pride.</p>
+
+    <h4>Fun Facts</h4>
+    <ul>
+      <li>It stood for only about 56 years.</li>
+      <li>It was made from bronze taken from enemy weapons.</li>
+      <li>It was one of the tallest statues of the ancient world.</li>
+    </ul>
+  </section>
+
+  <hr>
+
   <section id="lighthouse">
-    <h3> 2) Lighthouse of Alexandria (Egypt)</h3>
-    <p>The Lighthouse of Alexandria, also known as the Pharos of Alexandria, was built around 280 BCE. It stood on the island of Pharos near the city of Alexandria. The lighthouse helped guide ships safely into the harbor. This was very important for trade and travel.</p>
-    <p>The lighthouse used fire at night and reflected sunlight during the day. Mirrors may have been used to increase visibility. Sailors could see the light from far away. This made navigation much safer.</p>
-    <p>The structure was one of the tallest buildings of the ancient world. It was built with strong stone and solid design. Engineers planned it to survive harsh sea conditions. It showed advanced knowledge of architecture.</p>
-    <p>Alexandria was a major center of learning and knowledge. The lighthouse represented guidance and wisdom. It helped connect different cultures through trade. It was more than just a tower.</p>
-    <p>Earthquakes slowly damaged the lighthouse over time. Eventually, it collapsed into the sea. Parts of it were reused in other buildings. Today, ruins can be found underwater.</p>
-    <p>The Lighthouse of Alexandria matters because it represents safety and guidance. It inspired the design of modern lighthouses. Its purpose saved lives. Its legacy continues today.</p>
+    <h3>7) Lighthouse of Alexandria (Egypt)</h3>
+    <p>The Lighthouse of Alexandria was built to guide ships safely to shore. It was important for trade and travel.</p>
+    <p>The lighthouse symbolized guidance and knowledge.</p>
+
     <h4>Fun Facts</h4>
     <ul>
       <li>It helped sailors for over 1,500 years.</li>
       <li>Some believe it used mirrors to reflect sunlight.</li>
-      <li>It inspired the design of later lighthouses.</li>
+      <li>It inspired later lighthouse designs.</li>
     </ul>
-    <img src="https://cdn.britannica.com/07/172307-050-4D3BA855/Pharos-Alexandria.jpg" alt="Lighthouse of Alexandria" width="450" height="450">
-    <p>Lighthouse of Alexandria</p>
   </section>
+
   <hr>
-  <section id="The Hanging Gardens Of Babylon">
-    
-  </section>
+
   <footer>
     <p>Author: Anas Arafa</p>
     <p>Email: anasarafa35@gmail.com</p>
   </footer>
+
 </body>
 </html>
