--- a/index.html
+++ b/index.html
@@ -23,114 +23,141 @@
   <hr>
 
   <section id="intro">
-    <h3>Brief Introduction to the 7 Wonders</h3>
+    <h2>Brief Introduction to the 7 Wonders</h2>
+
     <p>The Seven Wonders of the Ancient World are a list of remarkable structures built by ancient civilizations. These wonders were chosen because of their size, beauty, and importance. They showed what humans could achieve without modern technology. Each wonder reflected the values of the civilization that built it.</p>
-    <p>The wonders were spread across different regions, including Egypt, Greece, and parts of the Middle East. They served different purposes such as tombs, temples, statues, and navigation aids. Together, they represent faith, strength, creativity, and intelligence.</p>
+
+    <p>The wonders were spread across different regions, including Egypt, Greece, and parts of the Middle East. They served different purposes such as tombs, temples, statues, and navigation aids. Some were built for religion, others for love, power, or safety. Together, they represent faith, strength, creativity, and intelligence.</p>
+
+    <p>Only one of the Seven Wonders still exists today, the Great Pyramid of Giza. The others were destroyed by earthquakes, fires, or time. Even though they are gone, historical records keep them alive. Studying them helps us understand ancient history.</p>
+
+    <p>The Seven Wonders still matter because they inspire modern builders and thinkers. They remind us that great achievements are possible with vision and effort. Ancient people aimed to leave a lasting mark on the world. Their success continues to influence us today.</p>
   </section>
 
   <hr>
 
   <section id="pyramid">
-    <h3>1) Great Pyramid of Giza (Egypt)</h3>
-    <p>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu. It stands near the Nile River and was meant to prepare the pharaoh for the afterlife. This shows how strong Egyptian religious beliefs were.</p>
-    <p>Millions of stone blocks were used to build the pyramid without modern machines. The pyramid is the only wonder still standing today.</p>
+    <h2>Egypt: The Great Pyramid of Giza</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>The Great Pyramid was the tallest man-made structure for over 3,800 years.</li>
-      <li>Each stone block can weigh as much as a car or more.</li>
-      <li>Its sides almost perfectly face north, south, east, and west.</li>
-    </ul>
+    <p>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu. It stands near the Nile River and towers over the land. The pyramid was meant to prepare the pharaoh for the afterlife. This shows how strong Egyptian religious beliefs were.</p>
+
+    <p>Millions of stone blocks were used to build the pyramid. Workers moved these stones without modern machines. Their planning and math skills were very advanced. This proves the intelligence of ancient Egyptians.</p>
+
+    <p>The pyramid was once covered in smooth white limestone. It reflected sunlight and shined brightly. People could see it from far away. It symbolized power and greatness.</p>
+
+    <p>Inside the pyramid are narrow halls and chambers. These spaces protected the pharaoh’s body and treasures. Every part was carefully planned. Nothing was built by accident.</p>
+
+    <p>The Great Pyramid is the only wonder still standing today. It has survived time and weather. This shows the strength of its design. No other ancient structure compares to it.</p>
+
+    <p>The Great Pyramid matters because it shows human determination. It proves great things can be built with effort. People still study it today. It continues to inspire the world.</p>
   </section>
 
   <hr>
 
   <section id="gardens">
-    <h3>2) Hanging Gardens of Babylon (Iraq)</h3>
-    <p>The Hanging Gardens of Babylon were said to be built in a dry land and filled with plants and trees. Water flowed through the gardens, making them very rare for the region.</p>
-    <p>Many believe the gardens were built for a queen who missed her homeland. This made the gardens a symbol of love and beauty.</p>
+    <h2>Babylon, modern-day Iraq: The Hanging Gardens of Babylon</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>No clear ruins of the gardens have been found.</li>
-      <li>Some historians believe they may not have existed.</li>
-      <li>Ancient writers described machines lifting water.</li>
-    </ul>
+    <p>The Hanging Gardens of Babylon were built in a dry land. They were filled with trees, plants, and flowers. Water flowed through the gardens. This made them very rare for the region.</p>
+
+    <p>The gardens were built on high stone terraces. Water was lifted from the river below. This required smart engineering. It showed advanced technology.</p>
+
+    <p>Many believe the gardens were built for a queen. She missed the green land of her home. The gardens were meant to comfort her. This makes the wonder a symbol of love.</p>
+
+    <p>The gardens also showed royal power. Creating beauty in a harsh land showed control over nature. Few kingdoms could do this. It proved Babylon was strong.</p>
+
+    <p>No physical remains of the gardens have been found. This has caused debate among historians. Ancient writers described them in detail. Their stories kept the gardens alive.</p>
+
+    <p>The Hanging Gardens matter because they show creativity. They remind us beauty can exist anywhere. Even ideas can change history. This wonder still inspires imagination.</p>
   </section>
 
   <hr>
 
   <section id="zeus">
-    <h3>3) Statue of Zeus at Olympia (Greece)</h3>
-    <p>The Statue of Zeus was built inside a temple at Olympia to honor the king of the Greek gods. It was meant to inspire awe and respect.</p>
-    <p>The statue showed how important religion was in ancient Greece.</p>
+    <h2>Greece: The Statue of Zeus at Olympia</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>The statue nearly touched the temple ceiling.</li>
-      <li>It was made of gold and ivory.</li>
-      <li>People believed the roof would break if Zeus stood.</li>
-    </ul>
+    <p>The Statue of Zeus was built inside a temple at Olympia. It honored Zeus, the king of the Greek gods. People traveled far to see it. The statue inspired awe.</p>
+
+    <p>The statue was made of gold and ivory. Zeus sat on a grand throne. The statue filled the temple space. Visitors felt small before it.</p>
+
+    <p>Religion was very important in Greece. Zeus was seen as powerful and wise. The statue strengthened faith. It reminded people of divine authority.</p>
+
+    <p>Olympia was the site of the Olympic Games. Athletes believed Zeus watched them. This connected religion and competition. The statue made the games sacred.</p>
+
+    <p>The statue was later destroyed by fire. Nothing remains of it today. Written records describe its beauty. These records keep it remembered.</p>
+
+    <p>The Statue of Zeus matters because it shows the power of belief. Art helped express faith. People used creativity to honor gods. Its influence still exists.</p>
   </section>
 
   <hr>
 
   <section id="artemis">
-    <h3>4) Temple of Artemis at Ephesus (Turkey)</h3>
-    <p>The Temple of Artemis was built to honor the goddess Artemis. It was one of the largest temples ever built.</p>
-    <p>The temple showed wealth, power, and artistic skill.</p>
+    <h2>Turkey: The Temple of Artemis at Ephesus</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>The temple was rebuilt three times.</li>
-      <li>One man burned it down to become famous.</li>
-      <li>It was larger than the Parthenon.</li>
-    </ul>
+    <p>The Temple of Artemis was built to honor the goddess Artemis. It stood in the city of Ephesus. The temple was one of the largest ever built. It amazed visitors.</p>
+
+    <p>The temple had tall marble columns. Detailed carvings covered its walls. Artists worked for many years. Their skill showed great talent.</p>
+
+    <p>People visited the temple to worship. It was also a place of trade. This made it a social center. Religion and daily life mixed there.</p>
+
+    <p>The temple showed wealth and power. Building it required money and skill. Few cities could match it. Ephesus became famous.</p>
+
+    <p>The temple was destroyed many times. Fires and attacks caused damage. People rebuilt it again and again. This showed strong devotion.</p>
+
+    <p>Today, only ruins remain. The temple is still remembered. Its beauty lives in history. It proves dedication lasts.</p>
   </section>
 
   <hr>
 
   <section id="mausoleum">
-    <h3>5) Mausoleum at Halicarnassus (Turkey)</h3>
-    <p>The Mausoleum was built as a tomb for King Mausolus. It was created to honor him after death.</p>
-    <p>The structure mixed many artistic styles and showed respect and memory.</p>
+    <h2>Turkey: The Mausoleum at Halicarnassus</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>The word mausoleum comes from King Mausolus.</li>
-      <li>It stood about 140 feet tall.</li>
-      <li>Artists from different regions worked on it.</li>
-    </ul>
+    <p>The Mausoleum was built as a tomb for King Mausolus. His wife ordered its construction. It was meant to honor him. Love inspired its creation.</p>
+
+    <p>The structure was tall and detailed. It included statues and columns. Skilled artists worked on it. Their work made it unique.</p>
+
+    <p>The Mausoleum mixed many cultural styles. Greek and Egyptian designs were used. This showed shared ideas. It represented unity.</p>
+
+    <p>The tomb was meant to last forever. It honored memory and respect. Leaders wanted to be remembered. This belief shaped its design.</p>
+
+    <p>Earthquakes later destroyed the Mausoleum. Stones were reused in other buildings. Time changed its form. Its impact remained.</p>
+
+    <p>The word mausoleum comes from this wonder. This shows its influence. One structure shaped language. Its legacy still lives.</p>
   </section>
 
   <hr>
 
   <section id="colossus">
-    <h3>6) Colossus of Rhodes (Greece)</h3>
-    <p>The Colossus of Rhodes was a giant bronze statue built after a military victory. It honored the sun god Helios.</p>
-    <p>The statue represented strength and pride.</p>
+    <h2>Greece: The Colossus of Rhodes</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>It stood for only about 56 years.</li>
-      <li>It was made from bronze taken from enemy weapons.</li>
-      <li>It was one of the tallest statues of the ancient world.</li>
-    </ul>
+    <p>The Colossus of Rhodes was a giant bronze statue. It was built after a military victory. The statue honored the sun god Helios. It stood near the harbor.</p>
+
+    <p>Ships could see the statue as they arrived. It welcomed visitors to the city. The people felt pride. It became a symbol of freedom.</p>
+
+    <p>The statue took many years to build. Metal from weapons was reused. War materials became art. This showed resilience.</p>
+
+    <p>An earthquake destroyed the Colossus. It fell to the ground. Even broken, people admired it. Its size amazed everyone.</p>
+
+    <p>The remains stayed for centuries. Travelers came to see them. The statue was still famous. Its image lived on.</p>
+
+    <p>The Colossus matters because it represents strength. Even short life can leave impact. Pride shaped its creation. History remembers it.</p>
   </section>
 
   <hr>
 
   <section id="lighthouse">
-    <h3>7) Lighthouse of Alexandria (Egypt)</h3>
-    <p>The Lighthouse of Alexandria was built to guide ships safely to shore. It was important for trade and travel.</p>
-    <p>The lighthouse symbolized guidance and knowledge.</p>
+    <h2>Egypt: The Lighthouse of Alexandria</h2>
 
-    <h4>Fun Facts</h4>
-    <ul>
-      <li>It helped sailors for over 1,500 years.</li>
-      <li>Some believe it used mirrors to reflect sunlight.</li>
-      <li>It inspired later lighthouse designs.</li>
-    </ul>
+    <p>The Lighthouse of Alexandria was built to guide ships. It stood on an island near the city. Sailors depended on it. It kept trade safe.</p>
+
+    <p>The lighthouse used fire and mirrors. Light shined across the sea. This was advanced technology. It saved many lives.</p>
+
+    <p>The structure was tall and strong. It survived storms and waves. Engineers planned it well. Its design was impressive.</p>
+
+    <p>Alexandria was a center of learning. The lighthouse reflected knowledge. It helped connect the world. It was more than a tower.</p>
+
+    <p>Earthquakes destroyed the lighthouse. Stones fell into the sea. Nothing stands today. Time erased it.</p>
+
+    <p>The Lighthouse matters because it symbolizes guidance. Helping others was its purpose. Knowledge led the way. Its message remains.</p>
   </section>
 
   <hr>
@@ -139,6 +166,6 @@
     <p>Author: Anas Arafa</p>
     <p>Email: anasarafa35@gmail.com</p>
   </footer>
-
 </body>
 </html>
+
